# facial-recognition-qt

./: .gitignore  CMakeLists.txt  CameraWidget.cpp  CameraWidget.h  CascadeDetectorAdapter.cpp  CascadeDetectorAdapter.h  CentralWidget.cpp  CentralWidget.h  FacialRecognitionApplication.cpp  FacialRecognitionApplication.h  FacialRecognitionThread.cpp  FacialRecognitionThread.h  MainWindow.cpp  MainWindow.h  main.cpp
